--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,7 +83,7 @@ li {
 
 section {
     height: 600px;
-    padding: 2%;
+    padding: 5%;
     /* border: lightcoral 2px solid; */
     margin: 0px;
     display: flex;
@@ -99,7 +99,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1%;
+    padding: 5%;
 }
 
 input {
@@ -179,5 +179,7 @@ input {
 footer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 5%;
+    flex-direction: column;
 }
